--- a/mrpods.vcxproj
+++ b/mrpods.vcxproj
@@ -88,7 +88,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);libbz2.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\cloud\pro\Pro\paperbak\mrpods-main\BZLIB;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)BZLIB;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,7 +115,7 @@
       <OptimizeReferences>
       </OptimizeReferences>
       <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);libbz2.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\cloud\pro\Pro\paperbak\mrpods-main\BZLIB;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)BZLIB;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ImageHasSafeExceptionHandlers />
     </Link>
   </ItemDefinitionGroup>
